feat: changes of paypage and mail completed

--- a/views/experiences/detail.hbs
+++ b/views/experiences/detail.hbs
@@ -177,7 +177,7 @@
 
 
       {{#ispurchased experience session}}
-      <form action="/experiences/{{../experience.id}}/docomment" class="mt-1" method="post">
+      <form action="/experiences/{{../experience.id}}/docomment" class="mt-1" method="post" id="comment">
         <div class="form-actions pt-4">
 
           <!--- rating experience -->
