--- a/views/users/create.hbs
+++ b/views/users/create.hbs
@@ -116,7 +116,7 @@
 
       </div>
       <hr>
-      <button class="btn btn-primary btn-block p-3 mt-5 btn-naturet nt-f" type="submit">Guardar cambios <span class="fa fa-check nt-w ml-2"></span></button>
+      <button class="btn btn-primary btn-block p-3 mt-5 btn-naturet nt-f" type="submit">Save changes <span class="fa fa-check nt-w ml-2"></span></button>
       </form>
     </div>
   </div>
