--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -4,9 +4,9 @@
   <div class="container-slider mx-auto h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-left header-caption">
-        <h1 class="mobile-none">Nature is not just for visitting,</h1>
+        <h1 class="mobile-none">Nature is not just for visiting,</h1>
         <h1 class="mobile-none">is our real home.</h1>
-        <h1 class="just-mobile">Nature is not just for visitting, is our real home.</h1>
+        <h1 class="just-mobile">Nature is not just for visiting, is our real home.</h1>
         <hr class="small-green-hr">
         <p class="lead ml-0">The best ways, step by step...</p>
       </div>
