--- a/views/experiences/thankyou.hbs
+++ b/views/experiences/thankyou.hbs
@@ -1,40 +1,90 @@
-<div class="container profile-container mt-5">
-  <div class="row pb-5">
+{{> searchmobile}}
 
-    <div class="col-xl-3 col-md-3 col-12 ">
-      <div class=" profile-navigation d-flex flex-column mx-auto ">
-        <a href="">Categories</a>
-        <a href="">Some description</a>
-        <a href="/">Home</a>
-        <a href="/profile">profile</a>
-      </div>
-    </div>
-
-    <div class="col-xl-9 col-md-9 col-12">
-      <div class="text-center mt-3">
-        <h2>Your purchase <strong>{{session.name}}</strong>!!!</h2>
-        <h6 id="email">{{session.email}}</h6>
-        <h6>Thanks for purchasing this experience</h6>
-        <h4><strong>{{experience.name}}</strong></h4>
-        <h5>{{experience.price}}€</h5>
-        <hr>
-        <h5>Remember the cancellation policies of the creator of the experience </h5>
-        <h6>{{experience.user.politic}}, if you want to send it to the mail </h6>
-        <div class="newsletter-form mx-auto">
-          <button class="btn btn-default btn-sm news-letter-button" type="submit" id="sendpolitics">click here</button>
+<article id="create-user">
+  <div class="container-slider mx-auto mt-6 profile-container">
+    <div class="row pb-5 pt-5">
+      <div class="col-xl-4 col-md-12 col-12 row mx-auto nav-intro-profile" id="responsive-menu-tag">
+        <div class="profile-sidenav d-flex flex-column mx-auto nav-intro-profile mb-5 " id="getFixed">
+          <div class="profile-sidenav-inside d-flex flex-column mt-4">
+            <h4 class="nt-fb"><span class="far fa-map nt-c mr-3"></span>Purchase experience</h4>
+            <a href="/">Home</a>
+            <a href="/profile">Profile</a>
+          </div>
         </div>
-        <hr>
-        <h6>Please don't forget to comment and rate the experience once it has been done,
-          it will serve other users to find out about this
-          <a href="/experiences/{{experience.id}}">experience</a>
-        </h6>
-        <h6>Keep enjoying NATURAPP!!!</h6>
-        <a class="" href="/">
-          <img src="/img/logo-verde.svg" width="50" height="50" class="" alt="">
-          <span id="nav-logo-name">Natur<span id="nav-logo-name-app">app</span></span>
-        </a>
       </div>
-    </div>
-  </div>
-</div>
+
+      <div class="col-xl-8 col-md-12 col-12">
+
+
+        <div class="row pb-5 mb-5">
+          <div class="back-image-experiences d-flex align-items-center justify-content-center d-column">
+            <h1 class="nt-fb nt-w">Your purchase!!!</h1>
+            <hr class="hr-new-experience">
+
+          </div>
+        </div>
+
+        <section class="pb-5 pt-5">
+          <div class="text-center mt-5">
+          </div>
+        </section>
+        <section class=" pt-4 pb-5 border-bottom" id="description">
+          <div class="form-group">
+            <h2><span class="fa fa-credit-card nt-c mr-3"></span>Thank you {{session.name}} </h2>
+            <span class="ml-2 margin-checkbox nt-f">You just bought the experience <strong>{{experience.name}}</strong>,
+              we detail the details of it:</span>
+            <h6><span class="mt-2 ml-2 pt-2 fa fa-signature nt-c mr-3"></span>Place of experience</h6>
+            <div id="map" style="pointer-events: none; height: 200px;"></div>
+            <div class="price-und mt-3 ml-2 margin-checkbox nt-f">
+              <span>We remind you about the cancellation policies on this experience:</span>
+            </div>
+            <div class="mt-2 expertise-checkbox">
+              <h5 class="ml-2 margin-checkbox nt-f">{{experience.user.politic}}</h5>
+            </div>
+            <span class="ml-2 margin-checkbox nt-f">If you want to send it to the mail</span>
+
+            <button class="btn btn-default btn-sm news-letter-button" type="submit" id="sendpolitics">click here</button>
+
+            <div>
+              <h5 class="mt-2 ml-2 margin-checkbox nt-f">Please don't forget to comment and rate the experience once it
+                has been done,
+                it will serve other users to find out about this <a class="ml-2 margin-checkbox nt-f" href="/experiences/{{experience.id}}#comment">experience</a></h5>
+            </div>
+            <hr>
+            <div class="text-center mt-4">
+              <h5 class="text-center nt-f mt-5">Keep enjoying NATURAPP!!!</h6>
+                <a class="" href="/">
+                  <img src="/img/logo-verde.svg" width="50" height="50" class="" alt="">
+                  <span id="nav-logo-name">Natur<span id="nav-logo-name-app">app</span></span>
+                </a>
+            </div>
+          </div>
+
+        </section>
+</article>
+
+<script>
+  var decodedJson = decodeURIComponent("{{{pointsJSON}}}");
+  var jsonObj = JSON.parse(decodedJson);
+  window.points = jsonObj;
+</script>
+
 <script src="/js/send.js" type="text/javascript"></script>
+
+<script>
+  jQuery(function ($) {
+    function fixDiv() {
+      var $cache = $('#getFixed');
+      if ($(window).scrollTop() > 100 && $(window).width() >= 1080)
+        $cache.css({
+          'top': '40px'
+        });
+      else
+        $cache.css({
+          'top': 'auto'
+        });
+    }
+    $(window).scroll(fixDiv);
+    fixDiv();
+  });
+</script>
