--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -21,6 +21,9 @@
 		<li class="nav-item">
 			<a class="nav-link" href="/profile/edit">Edit Profile</a>
 		</li>
+			<li class="nav-item">
+			<a class="nav-link" href="/favourites">Favourites</a>
+		</li>
 		{{#if session.creator}}
 		<li class="nav-item">
 			<a class="nav-link" href="/experiences/create">Create</a>
