--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -134,7 +134,7 @@
         <p class="mb-5 ml-0 profile-paragraph"> Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
           mattis urna sodales ornare semper eros
           dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
-          fringilla porttitor tellus netus per facilisis. <a href="#" class="nt-c"><strong>View all</strong></a>
+          fringilla porttitor tellus netus per facilisis. <a href="/favourites" class="nt-c"><strong>View all</strong></a>
         </p>
         {{> likedslider}}
       </section>
@@ -144,7 +144,7 @@
         <p class="mb-5 ml-0 profile-paragraph"> Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
           mattis urna sodales ornare semper eros
           dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
-          fringilla porttitor tellus netus per facilisis.<a href="#" class="nt-c"><strong>View all</strong></a>
+          fringilla porttitor tellus netus per facilisis.<a href="/favourites" class="nt-c"><strong>View all</strong></a>
         </p>
         {{> purchasedslider}}
       </section>
@@ -188,7 +188,7 @@
           <div class="mb-2 col-xl-6 col-md-6 col-12">
             <div class="border-div-profile">
               <h4>Your phone number:</h4>
-              <p class=" ml-0 profile-paragraph">{{session.acreditation}}</p>
+              <p class=" ml-0 profile-paragraph">{{session.phone}}</p>
             </div>
           </div>
         </div>
@@ -239,7 +239,7 @@
       </a>
     </div>
     <div class="col-3 text-center menu-icon">
-      <a href="/favorites" class="d-flex flex-column-reverse link-nav-mobile">
+      <a href="/favourites" class="d-flex flex-column-reverse link-nav-mobile">
         <span class="menu-icon-text">Favourites</span>
         <span class="icon-favorites icon-nav"></span>
       </a>
